refactor: replace KnowledgeGraph domain and infrastructure with MemoryNote and NoteLink concepts. fixes #25